--- a/genero_x_tiempo/style.css
+++ b/genero_x_tiempo/style.css
@@ -1,6 +1,6 @@
 body{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
 }
