--- a/style.css
+++ b/style.css
@@ -5,6 +5,6 @@ html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; */
-    cursor: url(/assets/cohete.png), auto;
+    cursor: url(../Explicar_Con_Datos_tp2/assets/cohete.png), auto;
    
 }
