--- a/anio_y_tiempo/style.css
+++ b/anio_y_tiempo/style.css
@@ -3,4 +3,8 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    
 }
+h2 {
+    text-decoration: underline;
+  }
